Develop (#29)
* feat: add db tables

* feat: add popular film filter by year and genre

* feat: add popular film filter by year and genre

* fix: request order by id

* fix: request order by id

* fix: tests

* fix: tests

* Merge remote-tracking branch 'origin/add-most-populars' into add-most-populars

* Merge remote-tracking branch 'origin/add-most-populars' into add-most-populars

* change

* little fix schema.sql

* add film-directors mechanicks 1.0

* add film-directors mechanicks 1.1

* add film-directors mechanicks 1.2

* add film-directors mechanicks 1.3

* add film-directors mechanicks 1.4

* Добавил систему рекомендации фильмов
Добавлен Эндпоинт GET /users/{id}/recommendations
Реализована логика совместной фильтрации в DbFilmStorage

* Исправления падения гит тестов

* work with tests 1.5

* work with tests 1.6

* work with tests 1.7

* work with tests 1.8

* work with tests 1.9

* work with tests 1.10

* work with tests 1.11

* work with tests 1.11.1 big fix

* work with tests 1.12 next big fix in users/sql

* work with tests 1.12.1 next big fix in users/sql

* work with tests 1.13 last 1 error

* Добавлено каскадное удаление для таблиц films_genre,film_likes,user_friends

* Метод удаления, запрос к бд

* Мапинг удаления

* Чуть чуть поправил код, добавил метод удаления юзера с проверкой

* Добавил метод удаления фильма с проверкой

* Inmemory реализация

* Полностью переписал метод, убарв циклический запрос к БД, от него падали гит тесты

* Удалил лишние импорты

* feat: add reviews functionality

* fix: rename field id to reviewId

* fix: rename field id to reviewId

* feat: add user feed

* Update DbFilmStorage.java

* FW 11 is complete 1.14 after conflicts with develop

* FW 11 is complete 1.14.1 after conflicts with develop

* FW 11 is complete 1.14.2 after conflicts with develop

* feat: добавить поиск общих фильмов у двух пользователей

* add-search 1.0

* add-search 1.1

* add-search 1.2

* add-search 1.3 fix search in storage

* add-search 1.3.1 