@@ -11,7 +11,8 @@ import ru.yandex.practicum.filmorate.mappers.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
-import java.util.*;
+
+import java.util.Collection;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -19,15 +20,17 @@ import java.util.stream.Collectors;
 public class FilmService {
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+    private final EventService eventService;
 
     @Autowired
-    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
+    public FilmService(FilmStorage filmStorage, UserStorage userStorage, EventService eventService) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
+        this.eventService = eventService;
     }
 
-    public Collection<FilmDto> getFilms() {
-        return filmStorage.getFilms().stream()
+    public Collection<FilmDto> getFilms(Integer genre, Integer year) {
+        return filmStorage.getFilms(genre, year).stream()
                 .map(FilmMapper::mapToFilmDto)
                 .collect(Collectors.toList());
     }
@@ -59,6 +62,7 @@ public class FilmService {
         if (userStorage.getUser(userId).isEmpty()) {
             throw new NotFoundException("User " + userId + " not found");
         }
+        eventService.createEvent(userId, "ADD", "LIKE", filmId);
         filmStorage.addLike(filmId, userId);
     }
 
@@ -69,15 +73,40 @@ public class FilmService {
         if (userStorage.getUser(userId).isEmpty()) {
             throw new NotFoundException("User " + userId + " not found");
         }
+        eventService.createEvent(userId, "REMOVE", "LIKE", filmId);
         filmStorage.removeLike(filmId, userId);
     }
 
-    public Collection<Film> getPopularFilms(int count) {
-        return filmStorage.getFilms().stream()
-                .sorted((film1, film2) -> film2.getLikes().size() - film1.getLikes().size())
-                .limit(count)
-                .toList();
+    public Collection<Film> getPopularFilms(Integer count, Integer genreId, Integer year) {
+        Collection<Film> films = filmStorage.getFilms(genreId, year);
+
+        if (count != null) {
+            films = films.stream().limit(count).toList();
+        }
+        return films;
+    }
+
+    public Collection<FilmDto> getFilmsByDirector(long directorId, String sortBy) {
+        return filmStorage.getFilmsByDirector(directorId, sortBy).stream()
+                .map(FilmMapper::mapToFilmDto)
+                .collect(Collectors.toList());
+    }
+
+    public void deleteFilm(Long id) {
+        filmStorage.findFilm(id)
+                .orElseThrow(() -> new NotFoundException("Film with id " + id + " not found"));
+        filmStorage.deleteFilm(id);
+    }
+
+    public Collection<FilmDto> getCommonFilms(Long userId, Long friendId) {
+        return filmStorage.getCommonFilms(userId, friendId).stream()
+                .map(FilmMapper::mapToFilmDto)
+                .collect(Collectors.toList());
+    }
+
+    public Collection<FilmDto> searchFilms(String query, String by) {
+        return filmStorage.searchFilms(query, by).stream()
+                .map(FilmMapper::mapToFilmDto)
+                .collect(Collectors.toList());
     }
 }
-
-
